--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
 
   </head>
   <body>
+    <div id="overlay"></div>
     <div class="root" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
